--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,11 +41,11 @@ jobs:
         <h1>vmware-dora-evidence</h1>
         <p class="status">✅ Development deployment successful</p>
         <p><strong>Environment:</strong> Development</p>
-        <p><strong>Repository:</strong> uldyssian-sh/vmware-dora-evidence</p>
+        <p><strong>Repository:</strong> ${{ github.repository }}</p>
         <p><strong>Deployed:</strong> <span id="time"></span></p>
         <div class="links">
-            <a href="https://github.com/uldyssian-sh/vmware-dora-evidence">View Repository</a>
-            <a href="https://github.com/uldyssian-sh/vmware-dora-evidence/blob/main/README.md">Documentation</a>
+            <a href="https://github.com/${{ github.repository }}">View Repository</a>
+            <a href="https://github.com/${{ github.repository }}/blob/main/README.md">Documentation</a>
         </div>
     </div>
     <script>document.getElementById('time').textContent = new Date().toLocaleString();</script>
